--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ backend:
 build: ./backend
 
 ports:
-- "4000":"4000"
+- "4000:4000"
 
 volumes:
 - src:/app/srcbackend
@@ -27,7 +27,7 @@ frontend:
 build: ./frontend
 
 ports: 
- - "3000":"3000"
+ - "3000:3000"
  volumes: 
  - ./frontend/src:/app/src
  stdin_open: true
@@ -37,4 +37,4 @@ ports:
 
  volumes:
  data:
- srcbackend:
+ src:
